# openclaw-watchdog

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: agent-handoff.md  architecture.md  config.md  github-publish-checklist.md  openclaw-integration.md  recovery-policy.md  release-prep.md  testing.md
examples/: config.minimal.toml
examples/systemd/: openclaw-watchdog.service
scripts/: install.sh  uninstall.sh
src/openclaw_watchdog/: actions.py  cli.py  config.py  eventlog.py  locks.py  models.py  notify.py  policies.py  routing.py  service.py  session_store.py  state_eval.py  state_store.py  transcript.py  watchdog.py
tests/: run_tests.py  test_watchdog.py
tests/fixtures/: config.test.toml
tests/fixtures/openclaw/agents/demo-agent/sessions/: demo-session.jsonl  main-session.jsonl  sessions.json
