[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-watchdog"
version = "0.1.0"
description = "Policy-based watchdog for long-running OpenClaw sessions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "claw" }
]
dependencies = []

[project.scripts]
openclaw-watchdog = "openclaw_watchdog.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
